For now just link to neogeographica.com for docs

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-MeshTex is a plugin for GtkRadiant 1.5.  More interesting user documentation is on the way.
+MeshTex is a plugin for GtkRadiant 1.5.  More interesting user documentation at [neogeographica.com](http://neogeographica.com/).
 
 Doxygen-generated code documentation is available at docs/html/index.html
 
